--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -20,16 +20,16 @@
                  value="#{DesktopForm.tasks}"
                  scrollable="true"
                  var="task">
-        <p:column headerText="#{msgs.title}" id="taskTitle">
+        <p:column headerText="#{msgs.title}" id="taskTitle" styleClass="task-table-column">
             <h:outputText value="#{task.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.process}" id="taskProcess">
+        <p:column headerText="#{msgs.process}" id="taskProcess" styleClass="task-table-column">
             <h:outputText value="#{task.process.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.project}" id="taskProject">
+        <p:column headerText="#{msgs.project}" id="taskProject" styleClass="task-table-column">
             <h:outputText value="#{DesktopForm.getProject(task.process).title}"/>
         </p:column>
-        <p:column headerText="#{msgs.actions}" id="taskActions" styleClass="actionsColumn">
+        <p:column headerText="#{msgs.actions}" id="taskActions" styleClass="actionsColumn task-table-column">
             <h:form id="actionForm">
                 <h:link outcome="taskEdit" id="editTask"
                         rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editTask',task.process.project.client.id, task.process.project.id)}"
