--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -27,6 +27,23 @@ a:hover {
     text-decoration: underline;
 }
 
+a i,
+a:link i,
+a:visited i {
+    text-shadow: 0 0 0 transparent;
+    color: #0071bc;
+}
+
+a:hover i,
+a.ui-state-hover i {
+    color: #005182;
+}
+
+a.disabled i {
+    color: #999999;
+    cursor: default;
+}
+
 .ui-state-error {
     border-color: var(--error-border) !important;
 }
@@ -50,31 +67,147 @@ input.ui-state-error {
     box-shadow: 0 0 0;
 }
 
-.ui-button,
 .ui-selectcheckboxmenu .ui-selectcheckboxmenu-trigger,
-.ui-widget-content button.ui-state-default,
 .timeline-content .ui-state-default {
     background: #0071bc;
     color: #fff;
 }
 
-button.secondary-button {
-    border: 1px solid #0071bc !important;
+/* Buttons */
+.ui-button,
+.ui-widget-content .ui-button {
+    background: #0071bc;
+    box-sizing: border-box;
+    color: #fff;
+    height: 36px;
 }
 
-button.secondary-button,
-button.secondary-button span.ui-icon {
-    background: #fff !important;
-    color: #0071bc !important;
+.ui-button .ui-icon,
+.ui-widget-content .ui-button .ui-icon {
+    right: 10px;
 }
 
-button.secondary-button.ui-state-hover {
-    background: #f3f3f3 !important;
+.ui-button-text-icon-right .ui-button-text {
+    padding: 0 calc(1em + 20px) 0 10px;
 }
 
 button.reload-button {
     border: 0 !important;
     margin-left: 10px !important;
+}
+
+.ui-button.ui-state-hover,
+.ui-widget-content .ui-button.ui-state-hover {
+    background: #005182;
+}
+
+.ui-button.secondary,
+.ui-widget-content .ui-button.secondary {
+    background: #fff;
+    border: solid 1px #66acd8;
+    color: #66acd8;
+}
+
+.ui-button.secondary .ui-icon,
+.ui-widget-content .ui-button.secondary .ui-icon {
+    color: #66acd8;
+}
+
+.ui-button.secondary.ui-state-hover,
+.ui-widget-content .ui-button.secondary.ui-state-hover {
+    background: #fff;
+    border: solid 1px #005182;
+    color: #005182;
+}
+
+.ui-widget-content .ui-button.secondary.ui-state-hover .ui-icon {
+    background: #fff;
+    color: #005182;
+}
+
+.ui-button.callto,
+.ui-menubutton.callto .ui-button,
+.ui-widget-content .ui-button.callto {
+    background: #42ba37;
+    color: #fff;
+}
+
+.ui-button.callto:hover,
+.ui-button.callto.ui-state-hover,
+.ui-menubutton.callto .ui-button.ui-state-hover,
+.ui-widget-content .ui-button.callto.ui-state-hover {
+    background: #258725;
+    color: #fff;
+}
+
+.ui-button:disabled,
+.ui-button.disabled,
+.ui-button.disabled:focus,
+.ui-button.disabled.ui-state-active,
+.ui-button.disabled.ui-state-focus,
+.ui-button.disabled.ui-state-hover,
+.ui-button.ui-state-disabled,
+.ui-menubutton .ui-button.ui-state-disabled,
+.ui-menubutton .ui-button.ui-state-disabled.ui-state-active,
+.ui-menubutton .ui-button.ui-state-disabled.ui-state-focus,
+.ui-menubutton .ui-button.ui-state-disabled.ui-state-hover,
+.ui-widget-content .ui-button.ui-state-disabled,
+.ui-widget-content .ui-button.ui-state-disabled:focus,
+.ui-widget-content .ui-button.ui-state-disabled.ui-state-active,
+.ui-widget-content .ui-button.ui-state-disabled.ui-state-focus,
+.ui-widget-content .ui-button.ui-state-disabled.ui-state-hover {
+    background: #d8d8d8;
+    border: none;
+    color: #999999;
+    opacity: 1;
+    cursor: default;
+}
+
+.ui-button:disabled .ui-icon,
+.ui-button.disabled .ui-icon,
+.ui-button.disabled:focus .ui-icon,
+.ui-button.disabled.ui-state-active .ui-icon,
+.ui-button.disabled.ui-state-focus .ui-icon,
+.ui-button.disabled.ui-state-hover .ui-icon,
+.ui-widget-content .ui-button:disabled .ui-icon,
+.ui-widget-content .ui-button.disabled .ui-icon,
+.ui-widget-content .ui-button.disabled:focus .ui-icon,
+.ui-widget-content .ui-button.disabled.ui-state-active .ui-icon,
+.ui-widget-content .ui-button.disabled.ui-state-focus .ui-icon,
+.ui-widget-content .ui-button.disabled.ui-state-hover .ui-icon {
+    color: #999999;
+}
+
+a.plain,
+a.plain.ui-state-active,
+a.plain.ui-state-focus,
+a.plain.ui-state-hover,
+a.plain.ui-state-disabled,
+.ui-button.plain,
+.ui-button.plain.ui-state-active,
+.ui-button.plain.ui-state-focus,
+.ui-button.plain.ui-state-hover,
+.ui-button.plain.ui-state-disabled,
+.ui-commandlink.plain,
+.ui-commandlink.plain.ui-state-active,
+.ui-commandlink.plain.ui-state-focus,
+.ui-commandlink.plain.ui-state-hover,
+.ui-commandlink.plain.ui-state-disabled {
+    background: transparent;
+    border: none;
+    color: #0071bc;
+}
+
+a.plain.ui-state-hover,
+.ui-button.plain.ui-state-hover,
+.ui-commandlink.plain.ui-state-hover {
+    color: #005182;
+}
+
+a.plain.ui-state-disabled,
+.ui-button.ui-state-disabled {
+    color: #999999;
+    cursor: default;
 }
 
 .ui-state-default,
@@ -85,36 +218,32 @@ button.reload-button {
     box-shadow: 0 0 0 transparent;
 }
 
-.ui-state-default a,
-.ui-state-default a:link,
-.ui-state-default a:visited {
-    text-shadow: 0 0 0 transparent;
-    color: #0071bc;
-}
-
-button .ui-icon {
-    color: #fff;
-    border-radius: 0;
-}
-
-.ui-button-text-icon-left .ui-icon.fa,
-.ui-button-text-icon-right .ui-icon.fa,
-.ui-button-icon-only .ui-icon.fa {
+button .ui-icon,
+.ui-button-text-icon-left .ui-icon,
+.ui-button-text-icon-right .ui-icon,
+.ui-button-icon-only .ui-icon,
+.ui-widget-content button .ui-icon,
+.ui-widget-content .ui-button-text-icon-left .ui-icon,
+.ui-widget-content .ui-button-text-icon-right .ui-icon,
+.ui-widget-content .ui-button-icon-only .ui-icon {
     overflow: visible;
-}
-
-.ui-button-text-icon-left .ui-button-text {
-    padding: .5em .7em .5em 2.1em;
-}
-
-.ui-button-text-icon-right .ui-button-text {
-    padding: .5em 2.1em .5em .7em;
+    border-radius: 0;
+    margin-top: -8px;
 }
 
 .ui-button-icon-only .ui-button-text,
 .ui-button-text-only .ui-button-text,
 .ui-datepicker-trigger.ui-button-icon-only .ui-button-text {
-    padding: .5em;
+    padding: 0 10px;
+}
+
+button.ui-datepicker-trigger.ui-button-icon-only::before {
+    box-sizing: border-box;
+    height: 100%;
+    line-height: 100%;
+    padding: 10px;
+    top: 0;
+    width: 100%;
 }
 
 .ui-button-small {
@@ -128,63 +257,72 @@ button .ui-icon {
     background: #d8d8d8;
 }
 
-.ui-state-hover:hover,
-.ui-selectcheckboxmenu .ui-selectcheckboxmenu-label:hover,
-.ui-paginator .ui-state-default:hover,
-.ui-widget-content button.ui-state-default:hover,
-.ui-widget-content .ui-inputfield:hover,
-.timeline-content .ui-state-default:hover {
-    background: #004f81;
-    color: #fff;
-}
-
-.ui-state-hover:hover a {
-    color: #fff;
-}
-
 .ui-inputfield,
 .ui-selectcheckboxmenu-multiple-container.ui-inputfield,
 .ui-picklist-list-wrapper,
-.ui-widget-content .ui-inputfield
-{
-    border: 1px solid #004f81;
-    padding: .5em;
-    color: #0071bc;
+.ui-widget-content .ui-inputfield {
+    border: 1px solid #0071bc;
     box-shadow: 0 0 0 transparent;
+    box-sizing: border-box;
+    color: #0071bc;
+    height: 36px;
+    padding: 0 10px;
 }
 
-.ui-inputfield.ui-inputtext::placeholder {
-    color: #999999;
-}
-
-.ui-inputfield.ui-inputtext::-webkit-input-placeholder { /* Webkit, Blink */
-    color: #999999;
-}
-.ui-inputfield.ui-inputtext:-moz-placeholder { /* Firefox 4-18 */
-    color: #999999;
-}
-.ui-inputfield.ui-inputtext::-moz-placeholder { /* Firefox 19+ */
-    color: #999999;
-}
-.ui-inputfield.ui-inputtext:-ms-input-placeholder { /* IE 10-11 */
-    color: #999999;
-}
-.ui-inputfield.ui-inputtext:-ms-input-placeholder { /* Edge */
-    color: #999999;
-}
-
-.ui-selectcheckboxmenu .ui-selectcheckboxmenu-label,
-.ui-selectonemenu .ui-selectonemenu-label {
-    border: 1px solid #004f81;
-    padding: .5em;
+.ui-inputfield.ui-state-hover,
+.ui-selectonemenu.ui-state-hover {
     background: #fff;
+    border-color: #005182;
+    color: #005182;
+}
+
+.ui-inputfield.ui-state-focus,
+.ui-selectonemenu.ui-state-focus {
+    background: #0071bc;
+    border-color: #0071bc;
+    color: #fff;
+}
+
+
+.ui-inputfield::placeholder {
+    color: #0071bc;
+}
+
+.ui-inputfield.ui-state-hover::placeholder {
+    color: #005182;
+}
+
+.ui-inputfield.ui-state-focus::placeholder {
+    color: #fff;
 }
 
 .ui-selectonemenu .ui-selectonemenu-trigger {
-    border: 1px solid #004f81;
-    padding: .5em;
     width: auto;
     box-sizing: border-box;
+}
+
+.ui-selectcheckboxmenu .ui-selectcheckboxmenu-label,
+.ui-selectonemenu .ui-selectonemenu-label,
+.ui-selectonemenu .ui-selectonemenu-trigger {
+    background: #fff;
+    border: 1px solid #0071bc;
+    padding: .5em 10px;
+}
+
+.ui-selectcheckboxmenu.ui-state-hover .ui-selectcheckboxmenu-label,
+.ui-selectonemenu.ui-state-hover .ui-selectonemenu-label,
+.ui-selectonemenu.ui-state-hover .ui-selectonemenu-trigger {
+    background: #fff;
+    border-color: #005182;
+    color: #005182;
+}
+
+.ui-selectcheckboxmenu.ui-state-focus .ui-selectcheckboxmenu-label,
+.ui-selectonemenu.ui-state-focus .ui-selectonemenu-label,
+.ui-selectonemenu.ui-state-focus .ui-selectonemenu-trigger {
+    background: #0071bc;
+    border-color: #0071bc;
+    color: #fff;
 }
 
 .ui-inputfield.ui-state-focus, .ui-widget-content .ui-inputfield.ui-state-focus, .ui-widget-header .ui-inputfield.ui-state-focus {
@@ -628,4 +766,13 @@ tr.ui-expanded-row-content .ui-panelgrid .ui-panelgrid-cell,
 
 .no-header thead {
     display: none !important;
+}
+
+/* Helper classes for margin */
+.m-1em {
+    margin: 1em;
+}
+
+.m-0 {
+    margin: 0;
 }
