Append new styling rules on buttons

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
@@ -43,7 +43,7 @@
                                      update="editForm"
                                      oncomplete="PF('editPropertyDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
-                                     styleClass="button-filled-blue right">
+                                     styleClass="right">
                     </p:commandButton>
                 </p:row>
             </p:panelGrid>
