--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -53,6 +53,6 @@
                      value="#{msgs.propertyAdd}"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
-                     styleClass="button-filled-green">
+                     styleClass="callto m-1em">
     </p:commandButton>
 </ui:composition>
