--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -41,7 +41,7 @@
                                      update="editForm"
                                      oncomplete="PF('editTemplateDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
-                                     styleClass="button-filled-blue right"/>
+                                     styleClass="right"/>
                 </p:row>
             </p:panelGrid>
         </h:form>
