--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -44,7 +44,7 @@
                                      update="editForm"
                                      oncomplete="PF('editWorkpieceDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
-                                     styleClass="button-filled-blue right">
+                                     styleClass="right">
                     </p:commandButton>
                 </p:row>
             </p:panelGrid>
