--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -49,6 +49,6 @@
                      oncomplete="PF('editWorkpieceDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
-                     styleClass="button-filled-green">
+                     styleClass="callto m-1em">
     </p:commandButton>
 </ui:composition>
