--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
@@ -36,7 +36,7 @@
     <button id="addUser"
             onclick="PF('addUserDialog').show()"
             type="button"
-            class="ui-button ui-widget ui-corner-all button-filled-green"
+            class="ui-button ui-widget ui-corner-all callto m-1em"
             style="padding:.7em;border:none;">
         #{msgs.userAdd}
     </button>
