--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskTemplateEdit/taskEditUsers.xhtml
@@ -36,8 +36,7 @@
     <button id="addUser"
             onclick="PF('addUserDialog').show()"
             type="button"
-            class="ui-button ui-widget ui-corner-all button-filled-green"
-            style="padding:.7em;border:none;">
+            class="ui-button ui-widget ui-corner-all callto">
         #{msgs.userAdd}
     </button>
 </ui:composition>
