--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/taskList.xhtml
@@ -109,6 +109,6 @@
                      value="#{msgs.taskAdd}"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
-                     styleClass="button-filled-green"
+                     styleClass="callto"
                      id="addStepButton"/>
 </ui:composition>
