--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -47,8 +47,7 @@
                                      action="#{LoginForm.saveChangedPassword}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
-                                     validateClient="true"
-                                     styleClass="button-filled-blue">
+                                     validateClient="true">
                         <f:ajax execute="@form" render="@form"/>
                     </p:commandButton>
                 </div>
