--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
@@ -17,9 +17,13 @@
     xmlns:p="http://primefaces.org/ui">
     <p:panel>
         <p:selectBooleanButton
-                onLabel="#{msgs.locked}" offLabel="#{msgs.unlocked}"
-                onIcon="fa fa-lock fa-lg" offIcon="fa fa-unlock fa-lg" styleClass="locked-button"
-                id="detailLockedButton" value="#{ProjekteForm.lockedDetail}">
+                onLabel="#{msgs.locked}"
+                offLabel="#{msgs.unlocked}"
+                onIcon="fa fa-lock fa-lg"
+                offIcon="fa fa-unlock fa-lg"
+                styleClass="callto"
+                id="detailLockedButton"
+                value="#{ProjekteForm.lockedDetail}">
             <p:ajax event="change" update="editDetailForm"/>
         </p:selectBooleanButton>
     </p:panel>
