--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -36,7 +36,7 @@
     <button id="addUsergroup"
             onclick="PF('addUsergroupDialog').show()"
             type="button"
-            class="ui-button ui-widget ui-corner-all button-filled-green"
+            class="ui-button ui-widget ui-corner-all callto m-1em"
             style="padding:.7em;border:none;">
         #{msgs.userGroupsAdd}
     </button>
