--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -66,8 +66,7 @@
                              icon="fa fa-floppy-o fa-lg"
                              iconPos="right"
                              validateClient="true"
-                             onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.configurationSaving}','severity':'info'});"
-                             styleClass="button-filled-blue">
+                             onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.configurationSaving}','severity':'info'});">
                 <f:ajax execute="@form" render="@all"/>
             </p:commandButton>
         </p:panelGrid>
