--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -73,7 +73,7 @@
                     <h:outputText value="#{item.ruleset.title}"/>
                 </p:panelGrid>
 
-                <o:graphicImage value="#{item.diagramImage}" dataURI="true" />
+                <o:graphicImage rendered="#{item.workflow ne null}" value="#{item.diagramImage}" dataURI="true" />
             </div>
         </p:rowExpansion>
 
