--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
@@ -19,7 +19,7 @@
         <p:row>
             <div>
                 <p:outputLabel for="title" value="#{msgs.templateTitle}"/>
-                <p:inputText id="title" placeholder="#{msgs.processTitle}"
+                <p:inputText id="title" placeholder="#{msgs.templateTitle}"
                              value="#{TemplateForm.title}"
                              class="input"
                              required="#{empty param['editForm:saveButtonToggler']}">
@@ -38,7 +38,8 @@
 
             <div>
                 <p:outputLabel for="workflow" value="#{msgs.workflow}"/>
-                <p:selectOneMenu id="workflow" value="#{TemplateForm.template.workflow}" converter="#{workflowConverter}"
+                <p:selectOneMenu id="workflow" value="#{TemplateForm.template.workflow}"
+                                 converter="#{workflowConverter}"
                                  required="#{empty param['editForm:saveButtonToggler']}">
                     <f:selectItems value="#{TemplateForm.workflows}"/>
                     <p:ajax event="change" oncomplete="toggleSave()"/>
@@ -67,7 +68,15 @@
 
             <div>
                 <p:outputLabel for="showInList" value="#{msgs.showInSelectList}"/>
-                <p:selectBooleanCheckbox id="showInList" styleClass="input" value="#{TemplateForm.template.inChoiceListShown}">
+                <p:selectBooleanCheckbox id="showInList" styleClass="input"
+                                         value="#{TemplateForm.template.inChoiceListShown}">
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
+                </p:selectBooleanCheckbox>
+            </div>
+
+            <div>
+                <p:outputLabel for="active" value="#{msgs.active}"/>
+                <p:selectBooleanCheckbox id="active" styleClass="input" value="#{TemplateForm.template.active}">
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectBooleanCheckbox>
             </div>
