added display:none style to search bar

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -28,7 +28,7 @@
         </section>
 
         <section id="portal-search">
-            <h:form id="search-form" action="">
+            <h:form id="search-form" action="" style="display:none">
                 <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}"/><p:inputText id="search-field-short" a:placeholder="#{msgs.search}"/><button type="submit"><i class="fa fa-search"/></button>
             </h:form>
         </section>
