--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -129,11 +129,13 @@
                                     </div>
                                 </li>
                                 <div id="clientList" style="display: none">
-                                    <p:repeat value="#{SessionClientController.clientsOfCurrentUser}" var="client">
-                                        <li class="toggle-list">
-                                            <p:commandLink value="#{client.name}" action="#{SessionClientController.setSessionClient(client)}" update="@all"/>
-                                        </li>
-                                    </p:repeat>
+                                    <p:outputPanel deferred="true" deferredMode="visible">
+                                        <p:repeat value="#{SessionClientController.clientsOfCurrentUser}" var="client">
+                                            <li class="toggle-list">
+                                                <p:commandLink value="#{client.name}" action="#{SessionClientController.setSessionClient(client)}" update="@all"/>
+                                            </li>
+                                        </p:repeat>
+                                    </p:outputPanel>
                                 </div>
                                 <li><h:link value="#{msgs.userData}" outcome="userConfiguration"/></li>
                                 <li>
